# SCTMML-

./: .BallDropperYAML.cpp.swp  .cubeSim.cpp.swp  .dataCollection.cpp.swp  .dataCollection.h.swp  CMakeLists.txt  LengthControllerYAML.cpp  LengthControllerYAML.h  YAMLSimulator.cpp  \  collectData.sh  cubeSim.cpp  cubeSim.h  dataCollection.cpp  dataCollection.h  dataLog.txt  nnLog.txt
linReg/: computeCostMulti.m  featureNormalize.m  fmincg.m  gradientDescentMulti.m  learningCurve.m  linReg.m  linearRegCostFunction.m  newLog.txt  octave-workspace  oldLog.txt  polyFeatures.m  token.mat  trainLinearReg.m  validationCurve.m
nnReg/: nnCostFunction.m  nnGradient.m  nnLog.txt  nnReg.m  oldNNCostFunction.m  predict.m  sigmoidGradient.m  token.mat
nnSciKit/: .nnTrain.py.swp  Theta0.txt  Theta1.txt  a.out  b1.txt  dataLog.txt  faceLog.txt  newFile.txt  nnLog.txt  nnOrientation.txt  nnTrain.py  test.cpp  test.txt
